Fixed layout issues with smaller child buttons.

--- a/src/mfb.scss
+++ b/src/mfb.scss
@@ -202,9 +202,10 @@ $number-of-child-buttons: 4;
     display: block;
     position: absolute;
     top: 0;
+    right: ($main_button_size - $child_button_size + 2) / 2;
 
-    padding: 10px 0;
-    margin: -10px 0;    
+    padding: 10px + ($main_button_size - $child_button_size) / 2 0;
+    margin: -(10px + ($main_button_size - $child_button_size) / 2) 0;
   }
 }
 
@@ -216,7 +217,7 @@ $number-of-child-buttons: 4;
   font-size: 18px;
   text-align: center;
   line-height: 56px;
-  width: 100%;   
+  width: 100%;
 }
 
 .mfb-component__wrap{
@@ -248,7 +249,7 @@ $number-of-child-buttons: 4;
 .mfb-component__button--child{
   @extend .mfb-component__button;
   height: $child_button_size;
-  width: $child_button_size;  
+  width: $child_button_size;
 }
 // the icons for the main button
 .mfb-component__main-icon--active,
@@ -262,7 +263,9 @@ $number-of-child-buttons: 4;
 // the icons for the main button
 .mfb-component__child-icon,
 .mfb-component__child-icon{
-  @extend .mfb-component__icon;  
+  @extend .mfb-component__icon;
+  line-height: $child_button_size;
+  font-size: 18 / 56 * $child_button_size;
 }
 .mfb-component__main-icon--active{
   opacity: 0;
@@ -335,14 +338,26 @@ $number-of-child-buttons: 4;
 \*------------------------------------*/
 .mfb-component--br, .mfb-component--tr{
   [data-mfb-label]:after {
-    content: attr(data-mfb-label);  
-    right: 70px; 
+    content: attr(data-mfb-label);
+    right: 70px;
+  }
+}
+.mfb-component--br .mfb-component__list, .mfb-component--tr .mfb-component__list {
+  [data-mfb-label]:after {
+    content: attr(data-mfb-label);
+    right: 70px - ($main_button_size - $child_button_size) / 2;
   }
 }
 .mfb-component--tl, .mfb-component--bl{
   [data-mfb-label]:after {
-    content: attr(data-mfb-label);  
-    left: 70px; 
+    content: attr(data-mfb-label);
+    left: 70px;
+  }
+}
+.mfb-component--tl .mfb-component__list, .mfb-component--bl .mfb-component__list{
+  [data-mfb-label]:after {
+    content: attr(data-mfb-label);
+    left: 70px - ($main_button_size - $child_button_size) / 2;
   }
 }
 
